[gd_scene load_steps=8 format=3 uid="uid://boh8o6pwom2pe"]

[ext_resource type="FontFile" uid="uid://d0ikdbkke0c4o" path="res://fonts/joystix monospace.otf" id="1_4q3g8"]
[ext_resource type="Script" path="res://scripts/decision_box.gd" id="1_nj6bm"]
[ext_resource type="AudioStream" uid="uid://bqf0qxrdt5i3c" path="res://music/countdown-sound-effect-8-bit-151797.mp3" id="3_oyvbv"]

[sub_resource type="Animation" id="Animation_b7nr5"]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VSplitContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_uqctg"]
resource_name = "timer"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VSplitContainer/ColorRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 13), Vector2(424, 13)]
}

[sub_resource type="Animation" id="Animation_y35rq"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VSplitContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VSplitContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-130, -150), Vector2(-130, -212)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_or8x6"]
_data = {
"fade_in": SubResource("Animation_y35rq"),
"fade_out": SubResource("Animation_b7nr5"),
"timer": SubResource("Animation_uqctg")
}

[node name="decision_box" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_nj6bm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_or8x6")
}

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -130.0
offset_right = 212.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 13.2

[node name="choice1" type="Button" parent="VSplitContainer/HSplitContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4q3g8")
text = "choice number 1"

[node name="choice2" type="Button" parent="VSplitContainer/HSplitContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4q3g8")
text = "choice number 2"

[node name="ColorRect" type="ColorRect" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Countdown" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_oyvbv")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
